# GIFtoMCtexture

./: CMakeLists.txt  EasyGifReader.cpp  EasyGifReader.h  README.md  main.cpp
